# liveplay

./: .gitignore  API.md  ARCHITECTURE.md  DEVELOP.md  FIXES_APPLIED.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_PLAN.md  INTERNATIONALIZATION.md  README.md  SIGNING.md  app.vue  justfile  liveplay crash.txt  macosbuilderrors.txt  nuxt.config.ts  package-lock.json  package.json  setup-docs-site.ps1  test-api.ps1  tsconfig.json
.github/workflows/: build-release.yml  build-server.yml  deploy-docs.yml
app/components/: ActiveCueItem.vue  CartHotkeyConfig.vue  CartSlot.vue  ControlConfigModal.vue  MidiConfigModal.vue  PlaybackControls.vue  ProjectHeader.vue  PropertiesPanel.vue  WaveformTrimmer.vue
app/composables/: useAudioEngine.ts  useCartHotkeys.ts  useCartItems.ts  useLocalization.ts  useMidiController.ts
app/types/: project.ts
assets/json/: contributors.json
assets/styles/: main.scss
build-logs/: macintel.txt
client/: README.md  app.vue  nuxt.config.ts  package.json  tsconfig.json
client/app/: app.vue
client/app/components/: AboutModal.vue  ActionButton.vue  ActiveCueItem.vue  AudioImportModal.vue  Btn.vue  CartHotkeyConfig.vue  CartPlayer.vue  CartSlot.vue  ControlConfigModal.vue  DeleteSelectionModal.vue  LiveMeterBar.vue  LocalServerStatus.vue  MainWorkspace.vue  PlaybackControls.vue  PlaylistItem.vue  PlaylistView.vue  ProjectHeader.vue  ProjectRepairModal.vue  ProjectSettingsModal.vue  PropertiesPanel.vue  QuitConfirmModal.vue  RoutingMatrixPanel.vue  ServerFileBrowser.vue  ServerFilePickerModal.vue  StereoMeter.vue  UpdateModal.vue  VolumeSlider.vue  WaveformTrimmer.vue  WelcomeScreen.vue  YouTubeImportModal.vue
client/app/composables/: useAudioEngine.ts  useCartHotkeys.ts  useLiveMeters.ts  useLiveplayServer.ts  useMidiController.ts  useOutputTarget.ts  useProject.ts  useUiMode.ts
client/app/plugins/: liveplay-server.client.ts
client/app/types/: global.d.ts  project.ts  server.ts
client/app/utils/: indexDisplay.ts
client/assets/json/: contributors.json
client/assets/styles/: main.scss
client/components/: AboutModal.vue  ActiveCueItem.vue  AudioImportModal.vue  AudioLoadProgress.vue  CanvasFader.vue  CartPlayer.vue  CartSlot.vue  ConnectionLostModal.vue  ControlConfigModal.vue  LiveMeterBar.vue  LoadingOverlay.vue  LocalServerStatus.vue  LocationChoiceModal.vue  MainWorkspace.vue  PlaybackControls.vue  PlaylistItem.vue  PlaylistView.vue  ProjectHeader.vue  ProjectSettingsModal.vue  PropertiesPanel.vue  RoutingMatrixPanel.vue  ServerFileBrowser.vue  ServerFilePickerModal.vue  ServerSettingsModal.vue  StereoMeter.vue  UnsavedChangesModal.vue  VUMeter.vue  WaveformCanvas.vue  WaveformTrimmer.vue  WelcomeScreen.vue  YouTubeImportModal.vue
client/composables/: useAudioEngine.ts  useCartItems.ts  useLiveMeters.ts  useLiveplayServer.ts  useLocalization.ts  useProject.ts  useStateViewer.ts
client/electron/: main.js  preload.js
client/locales/: ar.json  bn.json  de.json  el.json  en.json  es.json  fa.json  fr.json  hi.json  it.json  ja.json  ko.json  no.json  pt.json  ro.json  ru.json  sq.json  sv.json  tr.json  ur.json  zh.json
client/plugins/: liveplay-server.client.ts
client/scripts/: add-play-next.mjs  update-locales.mjs
client/types/: global.d.ts  project.ts  server.ts
client/utils/: audio.ts
components/: AboutModal.vue  ActiveCueItem.vue  CartHotkeyConfig.vue  CartPlayer.vue  CartSlot.vue  ControlConfigModal.vue  MainWorkspace.vue  PlaybackControls.vue  PlaylistItem.vue  PlaylistView.vue  ProgressModal.vue  ProjectHeader.vue  ProjectSelectionModal.vue  PropertiesPanel.vue  UpdateModal.vue  WaveformTrimmer.vue  WelcomeScreen.vue  YouTubeImportModal.vue
composables/: useAudioEngine.ts  useCartHotkeys.ts  useCartItems.ts  useLocalization.ts  useMidiController.ts  useProject.ts  useStateViewer.ts
docs-site/: .gitignore  README.md  app.vue  nuxt.config.ts  package.json  tsconfig.json
docs-site/app/: app.vue
docs-site/app/components/: LanguageSwitcher.vue
docs-site/assets/styles/: main.scss
docs-site/components/: FeatureHighlight.vue  LanguageSwitcher.vue
docs-site/composables/: useI18n.ts
docs-site/public/: README.md  contributors.json  package.json
docs-site/public/locales/: ar.json  bn.json  de.json  el.json  en.json  es.json  fa.json  (+14 more)
docs-site/scripts/: copy-screenshots.mjs
electron/: main.js  preload-state-viewer.js  preload.js
guides/: AUDIO-IMPROVEMENTS.md  CI-CD-SETUP.md  DEVELOP.md  DOCS-SITE-COMPLETE.md  DOCS-SITE-QUICK.md  DOCS-SITE-SETUP.md  INTERNATIONALIZATION.md  RELEASE-CHECKLIST.md  RELEASE-QUICK.md  RELEASES.md  UPDATE_SYSTEM.md  WORKFLOW-FIXES.md
locales/: ar.json  bn.json  de.json  el.json  en.json  es.json  fa.json  fr.json  hi.json  it.json  ja.json  ko.json  no.json  pt.json  ro.json  ru.json  sq.json  sv.json  tr.json  ur.json  zh.json
scripts/: README.md  add_all_missing_locales.py  add_dual_dialog_locales.py  add_missing_locales.py  add_repair_locales.py  add_server_unreachable_locale.py  build-all.js  build-clean.js  build-server-app-mac.js  build-server.js  ensure-server.js  run-server.js  sync-locale-keys.js  version.js
server/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
server/assets/: server.rc
server/include/liveplay/: crash_handler.hpp  logger.hpp
server/include/liveplay/audio/: engine.hpp  limiter.hpp  ltc_generator.hpp  meter.hpp  mixer_channel.hpp  playback_item.hpp  types.hpp
server/include/liveplay/core/: backup_manager.hpp  project_state.hpp
server/include/liveplay/meta/: metadata.hpp  waveform.hpp
server/include/liveplay/net/: control_server.hpp  discovery.hpp
server/include/liveplay/util/: unicode_path.hpp
server/src/: crash_handler.cpp  logger.cpp  main.cpp
server/src/audio/: engine.cpp  limiter.cpp  ltc_generator.cpp  meter.cpp  miniaudio_impl.c  mixer_channel.cpp  playback_item.cpp
server/src/core/: backup_manager.cpp  project_state.cpp
server/src/meta/: metadata.cpp  waveform.cpp
server/src/net/: control_server.cpp  discovery.cpp
server/tests/: meter_test.cpp
types/: global.d.ts  project.ts
(+41 files in other folders)
